<resources>
    <string name="app_name">天气</string>
    <!--Weather Type-->
    <string name="weather_fine">晴</string>
    <string name="weather_cloudy">多云</string>
    <string name="weather_overcast">阴</string>
    <string name="weather_thundershower">雷阵雨</string>
    <string name="weather_thundershower_with_hail">雷阵雨伴有冰雹</string>
    <string name="weather_freezing_rain">冻雨</string>
    <string name="weather_shower">阵雨</string>
    <string name="weather_light_rain">小雨</string>
    <string name="weather_moderate_rain">中雨</string>
    <string name="weather_heavy_rain">大雨</string>
    <string name="weather_rainstorm">暴雨</string>
    <string name="weather_heavy_rainstorm">大暴雨</string>
    <string name="weather_extraordinary_rainstorm">特大暴雨</string>
    <string name="weather_sleet">雨夹雪</string>
    <string name="weather_snow_shower">阵雪</string>
    <string name="weather_light_snow">小雪</string>
    <string name="weather_moderate_snow">中雪</string>
    <string name="weather_heavy_snow">大雪</string>
    <string name="weather_snowstorm">暴雪</string>
    <string name="weather_fog">雾</string>
    <string name="weather_sandstorm">沙尘暴</string>
    <string name="weather_strong_sandstorm">强沙尘暴</string>
    <string name="weather_floating_dust">浮尘</string>
    <string name="weather_blowing_sand">扬沙</string>
    <string name="weather_haze">霾</string>
    <string name="index_carwash">洗车指数</string>
    <string name="about">关于</string>
    <string name="author">关于作者</string>
    <string name="introduce">应用介绍</string>
    <string name="summary">一个基于material design的天气app，网络请求采用retrofit 2.0 + rxjava， 也使用了三个自定义的view用于展示日出日落， 七天天气预报，空气质量。</string>
    <string name="author_introduce">一个自学Android的电气狗Y(^_^)Y</string>
    <string name="email_title">邮箱</string>
    <string name="emai_summary">sanousun@163.com</string>
    <string name="github_title">github</string>
    <string name="github_summary">http://github.com/sanousun</string>
    <string name="license">开源许可</string>
    <string name="city_list">城市天气列表</string>
    <string name="content">技术支持</string>
    <string name="location">定位服务</string>
    <string name="Gaode">高德地图sdk</string>
    <string name="version">版本</string>

    <string name="search_hint">请输入城市名，拼音或者坐标</string>
    <string name="path_cloud01">M5,50 A5,5 0 0 1 5,40 L25,40 A5,5 0 0 0 25,30 L10,30 A5,5 0 0 1 10,20 A5,5 0 0 0 15,15 A5,5 0 0 1 20,10 L70,10 A5,5 0 0 1 75,15 A5,5 90 0 0 80,20 L90,20 A5,5 0 0 1 90,30 A5,5 0 0 0 90,40 L95,40 A5,5 0 0 1 95,50 L70,50 A5,5 0 0 1 65,45 A5,5 0 0 0 60,40 L58,40 A5,5 0 0 0 53,45 A5,5 0 0 1 48,50 Z</string>
</resources>
